apps/standard/example2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-example
spec:
  selector:
    matchLabels:
      app: todo-example
  replicas: 1
  template:
    metadata:
      labels:
        app: todo-example
    spec:
      containers:
        - name: todo-example
          image: massfice/test-repo:206821cbac9ee6e88387b5133a8fb76d2c708bab
          ports:
            - containerPort: 3000
