apps/standard/example2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-example
  labels:
    app: todo-example
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: todo-example
